--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A bip-39 wallet sdk supporting many formats and curves",
   "license": "GPL",
   "author": "COZ, Inc.",
@@ -18,11 +18,17 @@
     "fmt": "prettier --write ./src/**/*.ts"
   },
   "dependencies": {
+    "bignumber.js": "^9.1.0",
+    "bip39": "^3.0.4",
     "bs58": "^5.0.0",
+    "crypto": "^1.0.1",
+    "elliptic": "^6.5.4",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.14",
     "@types/node": "^18.8.4",
+    "assert": "^2.0.0",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1"
   }
