--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "bignumber.js": "^9.1.0",
     "bip39": "^3.0.4",
     "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "elliptic": "^6.5.4",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/bignumber.js": "^5.0.0",
     "@types/elliptic": "^6.4.14",
     "@types/node": "^18.8.4",
     "assert": "^2.0.0",
